--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: ruby
+sudo: false
+cache:
+  bundler: true
 rvm:
-  - 2.0
-  - 2.1
+  - 2.4.1
 env:
   global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+  matrix:
+    - RAILS_VERSION=5.0.2
