Restoring the CircleCI lint workflow step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,18 @@ jobs:
           paths:
           - project/*
           - project/**/*
+  lint:
+    parameters:
+      ruby_version:
+        type: string
+        default: 2.5.5
+    executor:
+      name: 'samvera/ruby'
+      ruby_version: << parameters.ruby_version >>
+    steps:
+      - attach_workspace:
+          at: ~/
+      - samvera/rubocop
   build:
     parameters:
       ruby_version:
@@ -52,7 +64,6 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
-      - samvera/rubocop
       - samvera/engine_cart_generate:
           cache_key: v1-internal-test-app-{{ checksum "hydra-role-management.gemspec" }}-{{ checksum "spec/test_app_templates/lib/generators/test_app_generator.rb" }}-{{ checksum "lib/generators/roles/roles_generator.rb" }}-<< parameters.rails_version >>-<< parameters.ruby_version >>
       - samvera/bundle_for_gem:
@@ -75,8 +86,6 @@ jobs:
     executor:
       name: 'samvera/ruby_fcrepo_solr_redis'
       ruby_version: << parameters.ruby_version >>
-    environment:
-      COVERALLS_PARALLEL: true
     steps:
       - attach_workspace:
           at: ~/
@@ -93,6 +102,10 @@ workflows:
       - bundle:
           ruby_version: "2.5.5"
           rails_version: "5.1.7"
+      - lint:
+          ruby_version: "2.5.5"
+          requires:
+            - bundle
       - build:
           ruby_version: "2.5.5"
           rails_version: "5.1.7"
@@ -103,8 +116,10 @@ workflows:
           ruby_version: "2.5.5"
           requires:
             - build
+            - lint
       - test:
           name: "ruby2-6-2"
           ruby_version: "2.6.2"
           requires:
             - build
+            - lint
