--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,7 @@ Metrics/BlockLength:
     - 'spec/lib/user_roles_spec.rb'
     - 'spec/models/role_spec.rb'
     - 'spec/routing/role_management_routes_spec.rb'
+    - hydra-role-management.gemspec
 
 Metrics/LineLength:
   Exclude:
