--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,10 @@ workflows:
   ci:
     jobs:
       - test:
+          name: ruby2-7_rails6-1
+          ruby_version: 2.7.5
+          rails_version: 6.1.6.1
+      - test:
           name: ruby2-7_rails6-0
           ruby_version: 2.7.5
           rails_version: 6.0.2
@@ -106,6 +110,10 @@ workflows:
                 - main
 
     jobs:
+      - test:
+          name: ruby2-7_rails6-1
+          ruby_version: 2.7.5
+          rails_version: 6.1.6.1
       - test:
           name: ruby2-7_rails6-0
           ruby_version: 2.7.5
