--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,10 +38,9 @@ jobs:
               echo "$(git branch --all --list master */master)"
             fi
             [[ -z "$(git branch --all --list master */master)" ]]
-      - samvera/bundle_for_gem:
+      - samvera/bundle:
           ruby_version: << parameters.ruby_version >>
           bundler_version: << parameters.bundler_version >>
-          project: hydra-role-management
       - samvera/rubocop
       - samvera/engine_cart_generate:
           cache_key: v1-internal-test-app-{{ checksum "hydra-role-management.gemspec" }}-{{ checksum "spec/test_app_templates/lib/generators/test_app_generator.rb" }}-{{ checksum "lib/generators/roles/roles_generator.rb" }}-<< parameters.rails_version >>-<< parameters.ruby_version >>
@@ -187,11 +186,11 @@ workflows:
           ruby_version: 3.2.0
           rails_version: 6.0.6.1
       - test:
-          name: "ruby3-1_rails6-1"
+          name: "ruby3-1_rails6-0"
           ruby_version: 3.1.3
           rails_version: 6.0.6.1
       - test:
-          name: "ruby3-0_rails6-1"
+          name: "ruby3-0_rails6-0"
           ruby_version: 3.0.5
           rails_version: 6.0.6.1
       - test:
