--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,10 +44,9 @@ jobs:
       - samvera/rubocop
       - samvera/engine_cart_generate:
           cache_key: v1-internal-test-app-{{ checksum "hydra-role-management.gemspec" }}-{{ checksum "spec/test_app_templates/lib/generators/test_app_generator.rb" }}-{{ checksum "lib/generators/roles/roles_generator.rb" }}-<< parameters.rails_version >>-<< parameters.ruby_version >>
-      - samvera/bundle_for_gem:
+      - samvera/bundle:
           ruby_version: << parameters.ruby_version >>
           bundler_version: << parameters.bundler_version >>
-          project: hydra-role-management
       - samvera/parallel_rspec
       - persist_to_workspace:
           root: ~/
@@ -94,11 +93,11 @@ workflows:
           ruby_version: 3.2.0
           rails_version: 6.0.6.1
       - test:
-          name: "ruby3-1_rails6-1"
+          name: "ruby3-1_rails6-0"
           ruby_version: 3.1.3
           rails_version: 6.0.6.1
       - test:
-          name: "ruby3-0_rails6-1"
+          name: "ruby3-0_rails6-0"
           ruby_version: 3.0.5
           rails_version: 6.0.6.1
       - test:
