--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,9 @@ jobs:
       - samvera/rubocop
       - samvera/engine_cart_generate:
           cache_key: v1-internal-test-app-{{ checksum "hydra-role-management.gemspec" }}-{{ checksum "spec/test_app_templates/lib/generators/test_app_generator.rb" }}-{{ checksum "lib/generators/roles/roles_generator.rb" }}-<< parameters.rails_version >>-<< parameters.ruby_version >>
+      - run:
+          name: Fix test app's Gemfile
+          command: sed -i 's/\(^.*error_highlight.*$\)/# \1/' .internal_test_app/Gemfile
       - samvera/bundle:
           ruby_version: << parameters.ruby_version >>
           bundler_version: << parameters.bundler_version >>
